[tool.poetry]
name = "pyxnv"
version = "1.0.0a"
description = "Python bindings for the JSON RPC interface of the Nerva cryptocurrency."
authors = ["Sayan Bhattacharyya <sayan@sn1f3rt.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
target-version = ["py312"]
