[tool.poetry]
name = "pyxnv"
version = "1.0.0a"
description = "Python bindings for the JSON RPC interface of the Nerva cryptocurrency."
license = "MIT"
authors = ["Sayan Bhattacharyya <sayan@sn1f3rt.dev>"]
readme = "README.md"
homepage = "https://github.com/Sn1F3rt/pyxnv"
repository = "https://github.com/Sn1F3rt/pyxnv"
documentation = "https://github.com/Sn1F3rt/pyxnv"
keywords = ["nerva", "cryptocurrency", "json-rpc", "bindings", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "xnv", from = "." },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
target-version = ["py312"]
